Updated loading screen page

--- a/WebpageStyles/index.css
+++ b/WebpageStyles/index.css
@@ -29,6 +29,10 @@
     backface-visibility: hidden;
   }
 
+  .fragment.clickable {
+    cursor: pointer;
+  }
+
   .fragment.assemble {
     opacity: 1;
     transform: translate(0, 0) scale(1) rotate(0deg);
