--- a/WebpageStyles/index.css
+++ b/WebpageStyles/index.css
@@ -17,7 +17,7 @@
   .fragment {
     position: absolute;
     color: white;
-    font-size: 96px;
+    font-size: clamp(24px, 8vw, 96px);
     font-weight: 800;
     opacity: 0;
     transform: translate(var(--sx), var(--sy)) scale(0.6) rotate(var(--rot));
